Ran the update docs command